# knowledge

./: .gitignore  README.md  docker-compose.yml  docker_cmd.txt  install.sh  main.py  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.local.json
docs/: architecture.md  installation.md  usage.md
docs/posts/3d-gaussian/: _index.md
docs/posts/blog/: _index.md
docs/posts/cc-arch-read/: 01_agent-scheduling.md  02_memory-system.md  _index.md
docs/posts/cc-code-read/: 00-导读.md  01-architecture-overview.md  02_工具系统.md  03_命令系统.md  04_查询引擎.md  05_上下文_记忆.md  06_权限安全.md  09_桥接_插件.md  10_Agent协调.md  11_编排逻辑_系统提示词驱动.md  _index.md
docs/posts/cloudnative/: 01-metallb.md  _index.md
docs/posts/distributed/: _index.md
docs/posts/docker/: _index.md
docs/posts/etcd/: _index.md
docs/posts/git/: _index.md
docs/posts/go/: _index.md
docs/posts/go-micro/: _index.md
docs/posts/grpc/: _index.md
docs/posts/java/: _index.md
docs/posts/kubernetes/: 10-pv-pvc-storageclass.md  _index.md
docs/posts/linux/: _index.md
docs/posts/llm/: _index.md
docs/posts/markdown/: _index.md
docs/posts/mysql/: _index.md
docs/posts/network/: _index.md
docs/posts/nginx/: _index.md
docs/posts/omo-code-read/: 00-导读.md  01-architecture-overview.md  02-plugin-hooks.md  03-multi-agent.md  04-lifecycle-hooks.md  05-tool-system.md  06-skill-system.md  07-config-system.md  08-background-agent.md  09-mcp-system.md  (+2 more)
scripts/: ingest.py
src/knowledge_vector/: __init__.py  chain.py  chat.py  config.py  loader.py  memory.py  splitter.py  vectorstore.py
test/: test_search.py
(+16 files in other folders)
