[project]
name = "knowledge-vector-db"
version = "0.1.0"
description = "Markdown to Milvus vector store using LangChain"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain_community>=0.3.0",
    "langchain_text_splitters>=0.3.0",
    "unstructured[md]>=0.16.0",
    "pymilvus>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_vector"]
